--- a/qtBuildSystem/Mu/statemanager.ui
+++ b/qtBuildSystem/Mu/statemanager.ui
@@ -18,7 +18,7 @@
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QListView" name="states"/>
+       <widget class="QListWidget" name="states"/>
       </item>
       <item>
        <widget class="QLabel" name="statePreview">
@@ -34,7 +34,11 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="newStateName"/>
+    <widget class="QLineEdit" name="newStateName">
+     <property name="placeholderText">
+      <string>State Name</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QPushButton" name="saveState">
