--- a/qtBuildSystem/Mu/statemanager.ui
+++ b/qtBuildSystem/Mu/statemanager.ui
@@ -52,6 +52,12 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>30</width>
+          <height>40</height>
+         </size>
+        </property>
        </widget>
       </item>
      </layout>
