Clean up the GUI some
Next is all the icons and updating the silkscreen svg.

--- a/qtBuildSystem/Mu/debugviewer.ui
+++ b/qtBuildSystem/Mu/debugviewer.ui
@@ -34,9 +34,6 @@
      <property name="standardButtons">
       <set>QDialogButtonBox::Close</set>
      </property>
-     <property name="centerButtons">
-      <bool>false</bool>
-     </property>
     </widget>
    </item>
    <item row="1" column="0">
@@ -60,12 +57,18 @@
         <property name="text">
          <string>Show Registers</string>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="5" column="1" colspan="3">
        <widget class="QPushButton" name="debugGetHexValues">
         <property name="text">
          <string>Get Hex Values</string>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -84,6 +87,9 @@
         <property name="text">
          <string>Print Debug Logs</string>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="8" column="1" colspan="3">
@@ -91,12 +97,18 @@
         <property name="text">
          <string>Erase Debug Logs</string>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="9" column="1" colspan="3">
        <widget class="QPushButton" name="debugDump">
         <property name="text">
          <string>Dump To File</string>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
