Remove delta savestate compression
Its a huge mess and the same thing can be accomplished by setting the emu directory to a zfs partition.

This will make working on the SD card interface significantly easier.

--- a/qtBuildSystem/Mu/statemanager.ui
+++ b/qtBuildSystem/Mu/statemanager.ui
@@ -90,6 +90,16 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QPushButton" name="deleteState">
+     <property name="text">
+      <string>Delete State</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
