--- a/qtBuildSystem/Mu/mainwindow.ui
+++ b/qtBuildSystem/Mu/mainwindow.ui
@@ -194,6 +194,9 @@
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/center.svg</normaloff>:/buttons/images/center.svg</iconset>
          </property>
+         <property name="text">
+          <string>center</string>
+         </property>
         </widget>
        </item>
        <item row="6" column="5">
@@ -222,6 +225,9 @@
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/todo.svg</normaloff>:/buttons/images/todo.svg</iconset>
+         </property>
+         <property name="text">
+          <string>todo</string>
          </property>
         </widget>
        </item>
@@ -308,6 +314,9 @@
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/screenshot.svg</normaloff>:/buttons/images/screenshot.svg</iconset>
          </property>
+         <property name="text">
+          <string>screenshot</string>
+         </property>
         </widget>
        </item>
        <item row="0" column="7">
@@ -325,6 +334,9 @@
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/debugger.svg</normaloff>:/buttons/images/debugger.svg</iconset>
          </property>
+         <property name="text">
+          <string>debugger</string>
+         </property>
         </widget>
        </item>
        <item row="0" column="5">
@@ -341,6 +353,9 @@
          <property name="icon">
           <iconset resource="mainwindow.qrc">
            <normaloff>:/buttons/images/install.svg</normaloff>:/buttons/images/install.svg</iconset>
+         </property>
+         <property name="text">
+          <string>install</string>
          </property>
         </widget>
        </item>
